--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f9fb0">  <td>17/02/16 13:01:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test23_MultiForm.testUploadFile()[pri:0, instance:demo.Test23_MultiForm@d2cc05a]">testUploadFile</td> 
-  <td>main@1121454968</td>   <td></td> </tr>
+<tr bgcolor="6786a3">  <td>20/08/28 18:00:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTestClass.testApiAttributes()[pri:0, instance:jackson.json_to_obj.UserTestClass@76b10754]">testApiAttributes</td> 
+  <td>main@1225197672</td>   <td></td> </tr>
 </table>
